# tensortrade

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travil.yml  .travis.yml  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.stable_baselines  EXPERIMENTS.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  README.md  TESTING_REPORT.md  TODO.md  Untitled.ipynb  crypto_bot.ipynb  dev.sh  environment.yml  main.py  pyproject.toml  requirements.txt  requirements_extras.txt  ruff.toml  setup.cfg  setup.py  train_advanced.py  train_optuna.py  train_ray_long.py  train_simple.py
.cursor/rules/: github.mdc
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: a--bug-fix.md  b--new-feature.md
.github/workflows/: ci.yml  python-publish.yml  tests.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _warnings.data.json  _warnings.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  functools.data.json  functools.meta.json  io.data.json  io.meta.json  itertools.data.json  itertools.meta.json  mmap.data.json  mmap.meta.json  numbers.data.json  numbers.meta.json  operator.data.json  operator.meta.json  posix.data.json  posix.meta.json  queue.data.json  queue.meta.json  random.data.json  random.meta.json  (+22 more)
dashboard/: biome.json  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
data/input/: coinbase-1h-btc-usd.csv
docker/: Dockerfile  README.md
docker/tests/: run_tests
docs/: .readthedocs.yml  CNAME  ENVIRONMENT_SETUP.md  EXPERIMENTS.md  Makefile  README.md  continuous-training-plan.md  index.html  requirements.txt  utils.py
docs/doctrees/: environment.pickle  landing.doctree
docs/github-pages-docs/: .buildinfo  genindex.html  index.html  landing.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/source/: conf.py  index.rst  landing.md
docs/tutorials/: index.md
examples/: .gitignore  Behavior_Cloning.ipynb  Behavior_Cloning.py  Development.ipynb  Gan_Example.ipynb  Gan_Exchange.ipynb  Generative_exchanges.ipynb  Intro_TensorTrade_Example.ipynb  New_Example.ipynb  README.md  Rebuild Indicators (TALib, StandardNormalizer) .ipynb  Rebuild Talib Indicators.ipynb  Stochastic_Exchange.ipynb  String_Initialization.ipynb  TensorTrade_TradingContext.ipynb  TensorTrade_Tutorial.ipynb  Tensortrade_Behavior_Cloning.ipynb  agents_example.ipynb  btc_usdt_1h.csv  chart_and_renderers.ipynb  chart_demo.ipynb  dqn_example.py  ledger_example.ipynb  live.py  new_actions.ipynb  renderers_and_plotly_chart.ipynb  requirements.agents.txt  requirements.txt  setup_environment_tutorial.ipynb  simple_live.py  simulated.py  stable_baselines_example.ipynb  test_agents.ipynb  test_features.ipynb  tf2_playground.ipynb  trading_context.ipynb  train.py  train_and_evaluate.ipynb  train_and_evaluate[outdated].ipynb  train_and_evaluate_02.ipynb  (+8 more)
examples/data/: Coinbase_BTCUSD_1h.csv  Coinbase_BTCUSD_d.csv  configuration.json
examples/deprecated/: TensorTrade_Alpha_Tutorial[outdated].ipynb  use_trading_context[outdated].ipynb
examples/training/: README.md  __init__.py  _common.py  run_ray_simulation.py  train_advanced.py  train_best.py  train_historical.py  train_optuna.py  train_profit.py  train_ray_long.py  train_robust.py  train_simple.py  train_trend.py  train_trend_sweep.py  train_walkforward.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tensortrade/: __init__.py  ray_manager.py  version.py
tensortrade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tensortrade/account/: __init__.py  portfolio.py  wallet.py
tensortrade/actions/: __init__.py  action_scheme.py  action_strategy.py  continuous_action_strategy.py  continuous_actions.py  discrete_action_strategy.py  discrete_actions.py  dynamic_orders.py  managed_risk_orders.py  multi_action_scheme.py  multi_discrete_action_strategy.py  multi_discrete_actions.py  multidiscrete_action_strategy.py  pair_criteria_size_actions.py  predefined_orders.py  simple_continuous_strategy.py  simple_discrete_strategy.py  simple_orders.py  target_stop_action_strategy.py  trade_type.py
tensortrade/agents/: __init__.py  a2c_agent.py  agent.py  base.py  cli.py  dqn_agent.py  replay_memory.py  tensorflow_agent.py  trading_agent.py
tensortrade/agents_old/: a2c_agent.py  agent.py
tensortrade/api/: inference_runner.py  insights.py  protocol.py  server.py  training_bridge.py
tensortrade/base/: __init__.py  clock.py  component.py  context.py  core.py  exceptions.py  registry.py
tensortrade/binance/: __init__.py  authentication.py  binance.py  futures.py  info.py  pair.py  pair_at_interval.py  pair_info.py  strategy.py  trader.py
tensortrade/core/: __init__.py  base.py  clock.py  component.py  context.py  exceptions.py  registry.py
tensortrade/data/: __init__.py  alpaca_crypto.py  alpaca_live.py  cdd.py  components.py  cryptodatadownload.py  feature_engineering.py  feed.py  internal.py  source.py
tensortrade/env/: __init__.py
tensortrade/environments/: OpenAIGym.py  __init__.py  history.py  multidiscrete_trading_environment.py  observation_history.py  trading_environment.py
tensortrade/exchanges/: __init__.py  asset_exchange.py  exchange.py  instrument_exchange.py
tensortrade/features/: __init__.py  feature_pipeline.py  feature_transformer.py  transformer.py
tensortrade/feed/: __init__.py
tensortrade/instruments/: __init__.py  exchange_pair.py  instrument.py  price.py  quantity.py  wallet.py  (+1 more)
tests/: requirements.txt  test_component_registration.py  test_registration.py
xagents/: __init__.py  base.py  cli.py
(+1665 files in other folders)
