[project]
name = "tensortrade-workspace"
version = "0.0.0"
description = "TensorTrade workspace root — not a publishable package."
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "tensortrade",
    "tensortrade-platform[torch,insights,optuna,alpaca]",
]

[tool.uv.sources]
tensortrade = { workspace = true }
tensortrade-platform = { workspace = true }

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
    "httpx>=0.27.0",
]
lint = [
    "ruff>=0.3.0",
    "autopep8>=2.0.4",
    "pre-commit>=3.7.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-apidoc>=0.4.0",
    "nbsphinx>=0.9.0",
    "nbsphinx-link>=1.3.0",
    "recommonmark>=0.7.1",
    "sphinx-markdown-tables>=0.0.17",
    "ipykernel>=6.29.0",
    "docutils>=0.20,<0.21",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
]

[tool.pytest.ini_options]
testpaths = [
    "packages/tensortrade/tests",
    "packages/tensortrade-platform/tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (skip with -m 'not slow')",
    "rllib: marks RLlib integration tests (skip with -m 'not rllib')",
]
addopts = "-v --tb=short --import-mode=importlib"
