[metadata]
description = An open source reinforcement learning framework for training, evaluating, and deploying robust trading agents.
long_description = file: README.md
long_description_content_type = text/markdown

[tool:pytest]
markers =
    slow: marks tests as slow (skip with -m 'not slow')
    rllib: marks RLlib integration tests (skip with -m 'not rllib')
